classDiagram
    %% Enum 定義は docs/common/01_Enum.mmd を参照
    namespace CleanupDomain {
        class MarketListingCleanupService {
            <<Application Service>>
            +DeleteExpiredAsync(now: DateTimeOffset) CleanupExpiredMarketListingsResult
            -DeleteListedEquipmentIfNeededAsync(listing: MarketListing) string
        }

        class DevelopmentDataCleanupService {
            <<Application Service>>
            +CleanupAsync() DevelopmentDataCleanupResult
            -DeleteEntitiesAsync~TEntity~(dbSet: DbSet~TEntity~) int
        }

        class RankingAggregationService {
            <<Application Service>>
            +RebuildAsync(now: DateTimeOffset) RankingAggregationResult
        }

        class RankingRebuildBackgroundService {
            <<Background Service>>
            +ExecuteAsync(stoppingToken: CancellationToken) Task
            +IntervalHours = 6
        }

        class QuestDataCleanupService {
            <<Application Service>>
            +DeleteOldDataAsync(cutoffDate: DateTimeOffset, cancellationToken: CancellationToken = default) QuestDataCleanupResult
        }

        class QuestDataCleanupBackgroundService {
            <<Background Service>>
            +ExecuteAsync(stoppingToken: CancellationToken) Task
            +IntervalDays = 7
        }

        class CleanupExpiredMarketListingsResult {
            <<Value Object>>
            +int DeletedListings
            +int DeletedEquipments
            +int DeletedItemQuantity
        }

        class DevelopmentDataCleanupResult {
            <<Value Object>>
            +int DeletedPlayers
            +int DeletedChatRooms
            +int DeletedChatMessages
            +int DeletedPlayerMoves
            +int DeletedPlayerMasterJobs
            +int DeletedPlayerEquipments
            +int DeletedPlayerItemStacks
            +int DeletedMarketListings
            +int DeletedMarketTradeHistories
            +int DeletedItemDeletionLogs
            +int DeletedQuestRooms
            +int DeletedQuestRoomParticipants
            +int DeletedQuestRuns
            +int DeletedQuestRunPartySnapshots
            +int DeletedQuestRunPartyMembers
            +int DeletedQuestRunEnemies
            +int DeletedQuestTurnCommands
            +int DeletedQuestFloorTraps
            +int DeletedQuestRewardSummaries
        }

        class QuestDataCleanupResult {
            <<Value Object>>
            +int DeletedQuestTurnCommands
            +int DeletedQuestFloorTraps
            +int DeletedQuestRunEnemies
            +int DeletedQuestRunPartyMembers
            +int DeletedQuestRunPartySnapshots
            +int DeletedQuestRewardSummaries
            +int DeletedQuestRuns
            +int DeletedQuestRoomParticipants
            +int DeletedQuestRoomAllowedPlayers
            +int DeletedQuestRooms
        }

        class RankingAggregationResult {
            <<Value Object>>
            +int UpsertedRows
            +DateTimeOffset CalculatedAt
        }

        class IRankingEntryRepository {
            <<Repository>>
            +Task UpsertRangeAsync(entries: IReadOnlyList~RankingEntry~)
            +Task DeleteSnapshotAsync(snapshotAt: DateTimeOffset)
        }

        class IMarketListingRepository {
            <<Repository>>
            +Task~IReadOnlyList~MarketListing~~ GetExpiredAsync(now: DateTimeOffset)
            +Task DeleteAsync(id: MarketListingId)
        }

        class IPlayerEquipmentRepository {
            <<Repository>>
            +Task~PlayerEquipment?~ GetAsync(id: PlayerEquipmentId)
            +Task DeleteAsync(id: PlayerEquipmentId)
        }

        class IItemDeletionLogRepository {
            <<Repository>>
            +Task AddAsync(log: ItemDeletionLog)
        }

        class ItemCleanupMaintenanceEndpoint {
            <<Endpoint>>
            +POST /internal/market/listings/cleanup-expired
            +Header X-Maintenance-Token
        }

        class DevelopmentCleanupMaintenanceEndpoint {
            <<Endpoint>>
            +POST /internal/development/cleanup-game-data
            +Development only
            +Localhost request skips token
            +Non-local request requires Header X-Maintenance-Token
        }

        class RankingMaintenanceEndpoint {
            <<Endpoint>>
            +POST /internal/rankings/rebuild
            +Header X-Maintenance-Token
        }

        class MaintenanceConfiguration {
            <<Configuration>>
            +string MarketCleanupToken
        }
    }

    MarketListingCleanupService ..> IMarketListingRepository : use
    MarketListingCleanupService ..> IPlayerEquipmentRepository : use
    MarketListingCleanupService ..> IItemDeletionLogRepository : use
    MarketListingCleanupService ..> CleanupExpiredMarketListingsResult : returns
    MarketListingCleanupService ..> MarketListing : cleanup target
    MarketListingCleanupService ..> PlayerEquipment : deletes listed equipment
    MarketListingCleanupService ..> ItemDeletionLog : writes
    DevelopmentDataCleanupService ..> AppDbContext : use
    DevelopmentDataCleanupService ..> DevelopmentDataCleanupResult : returns
    RankingAggregationService ..> IRankingEntryRepository : use
    RankingAggregationService ..> RankingAggregationResult : returns
    ItemCleanupMaintenanceEndpoint ..> MarketListingCleanupService : calls
    ItemCleanupMaintenanceEndpoint ..> MaintenanceConfiguration : validates token
    DevelopmentCleanupMaintenanceEndpoint ..> DevelopmentDataCleanupService : calls
    DevelopmentCleanupMaintenanceEndpoint ..> MaintenanceConfiguration : validates token
    RankingMaintenanceEndpoint ..> RankingAggregationService : calls
    RankingMaintenanceEndpoint ..> MaintenanceConfiguration : validates token
    RankingRebuildBackgroundService ..> RankingAggregationService : calls
    QuestDataCleanupService ..> AppDbContext : use
    QuestDataCleanupService ..> QuestDataCleanupResult : returns
    QuestDataCleanupBackgroundService ..> QuestDataCleanupService : calls
